--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -3,6 +3,6 @@
 {% block content %}
 	<h1>Bienvenue au sein de l'administration du Quai Antique</h1>
 	<p></p>
-	<a href="{{path('app_accueil')}}">Revenir sur le site</a>
+	<a href="{{path('app_home')}}">Revenir sur le site</a>
 
 {% endblock %}
