--- a/templates/include/_footer.html.twig
+++ b/templates/include/_footer.html.twig
@@ -9,7 +9,7 @@
 				<a href="{{path('app_card')}}">CARTE</a>
 			</div>
 			<div>
-				<a href="{{path('app_menu')}}">MENU</a>
+				<a href="{{path('app_menu')}}">MENUS</a>
 			</div>
 			<div>
 				{% if app.user %}
