--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -21,7 +21,7 @@
 					<a class="nav-link {{ app.request.get('_route') == 'app_card' ? 'active' : '' }}" href=" {{path('app_card')}} ">CARTE</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link {{ app.request.get('_route') == 'app_menu' ? 'active' : '' }}" " href=" {{path('app_menu')}} " ">MENU</a>
+					<a class="nav-link {{ app.request.get('_route') == 'app_menu' ? 'active' : '' }}" " href=" {{path('app_menu')}} " ">MENUS</a>
 				</li>
 				<li class="nav-item">
 					{% if app.user %}
