--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,20 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello UserController!{% endblock %}
+{% block title %}Création
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Users/coralineday/Desktop/QuaiAntique/src/Controller/UserController.php'|file_link(0) }}">src/Controller/UserController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Users/coralineday/Desktop/QuaiAntique/templates/user/index.html.twig'|file_link(0) }}">templates/user/index.html.twig</a></code></li>
-    </ul>
-</div>
+	<h1 class="title">CRÉATION RÉUSSIE</h1>
+	<div>
+		<p class="desc-error">
+			Bienvenue chez le Quai Antique
+		</p>
+		<p class="link-error">
+			Vous pouvez désormais aller vous balader sur notre site, en cliquant sur ce
+			<a href="{{path('app_card')}}">lien</a>
+			par exemple.
+		</p>
+	</div>
 {% endblock %}
