Finish work on the readme file

--- a/assets/styles/footer.scss
+++ b/assets/styles/footer.scss
@@ -59,6 +59,10 @@ footer a:hover {
     text-align : center;
   }
 
+  .address{
+    text-align: center;
+  }
+
   @media only screen and (max-width: 767px) {
     footer .container .column:first-child {
       display: none;
