--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,7 +11,7 @@
 	</header>
 	<div class="card-container ">
 		<div class="row" id="discover">
-			<div class="col-lg-3 col-md-3 col-sm-4">
+			<div class="col-lg-3 col-md-6 col-sm-12">
 				<div class="card">
 					<img src="{{ asset('build/images/champagne.jpg') }}" alt="Champagne - Quai Antique" title="Champagne - Quai Antique" class="card-img-top">
 					<div class="card-body">
@@ -30,7 +30,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-3 col-md-3 col-sm-4">
+			<div class="col-lg-3 col-md-6 col-sm-12">
 				<div class="card">
 					<img src="{{ asset('build/images/fish.jpg') }}" alt="Poisson - Quai Antique" title="Poisson - Quai Antique" class="card-img-top">
 					<div class="card-body">
@@ -49,7 +49,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-3 col-md-3 col-sm-4">
+			<div class="col-lg-3 col-md-6 col-sm-12">
 				<div class="card">
 					<img src="{{ asset('build/images/burger.jpg') }}" alt="Burger - Quai Antique" title="Burger - Quai Antique" class="card-img-top">
 					<div class="card-body">
@@ -68,7 +68,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-3 col-md-3 col-sm-4">
+			<div class="col-lg-3 col-md-6 col-sm-12">
 				<div class="card">
 					<img src="{{ asset('build/images/ice.jpg') }}" alt="Glace - Quai Antique" title="Glace - Quai Antique" class="card-img-top">
 					<div class="card-body">
@@ -91,7 +91,7 @@
 	</div>
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-lg-6 col-md-12 col-sm-12">
 				<div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
 					<div class="carousel-inner">
 						<div class="carousel-item active">
@@ -120,7 +120,7 @@
 					</button>
 				</div>
 			</div>
-			<div class="col-md-6 desc">
+			<div class="col-lg-6 col-md-12 col-sm-12 desc">
 				<h1>Quai Antique</h1>
 				<h5>La restauration, un métier de passion</h5>
 				<p>
