perfection of the responsive

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -72,4 +72,11 @@ a:hover{
     margin-bottom: 40px;
 }
 
-
+//title
+.title {
+    color: $cherry;
+    margin-top: 110px;
+    text-align: center;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.9);
+    margin-bottom: 20px;
+}
