--- a/templates/card/index.html.twig
+++ b/templates/card/index.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-	<h1 class="title-card">CARTE</h1>
+	<h1 class="title">CARTE</h1>
 	<div class="flash">
 		{% for message in app.flashes('success') %}
 			<div class="alert alert-success">
