--- a/templates/menu/index.html.twig
+++ b/templates/menu/index.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-	<h1 class="title-menu">MENUS</h1>
+	<h1 class="title">MENUS</h1>
 	<div class="food-menu">
 		{% for menu in menus %}
 			<div class="details-menu">
