--- a/templates/reservation/new.html.twig
+++ b/templates/reservation/new.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-	<h1 class="title-reservation">RÉSERVATION</h1>
+	<h1 class="title">RÉSERVATION</h1>
 
 	{% for message in app.flashes('error') %}
 		<div class="alert alert-danger flash">
