--- a/templates/reservation/pre_reservation.html.twig
+++ b/templates/reservation/pre_reservation.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-	<h1 class="title-reservation">RÉSERVATION</h1>
+	<h1 class="title">RÉSERVATION</h1>
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-sm-12 col-md-6 response">
