--- a/assets/styles/menu.scss
+++ b/assets/styles/menu.scss
@@ -75,12 +75,14 @@
   font-size: 12px;
 }
 
+//for the big desktop
 @media (min-width: 1235px) {
     .food-menu {
       column-count: 2;
     }
   }
   
+  //for the normal deskotp and the rest
   @media (max-width: 1234px) {
     .food-menu {
       column-count: 1;
