--- a/assets/styles/navbar.scss
+++ b/assets/styles/navbar.scss
@@ -91,7 +91,10 @@
       vertical-align: auto;
     }
 
+    
   /*media queries*/
+
+// for the phone portrait
 @media screen and (max-width:699px) {   
   body {
     transition: padding-top 0.3s ease-in-out;
@@ -114,6 +117,7 @@ body.navbar-expanded {
 }
 }
 
+//for the phone landscape mode
 @media (min-width: 700px) and (max-width: 999px) {
   .navbar-brand img {
     width: 25%;
@@ -128,6 +132,7 @@ body.navbar-expanded {
   }
  }
 
+ //for the tablet
 @media (min-width: 1000px) and (max-width: 1400px) {
   .navbar-brand img {
     width: 35%;
