--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,9 +9,7 @@
 		<title>
 			{% block title %}Accueil
 			{% endblock %}- Quai Antique</title>
-		<link
-		rel="icon" type="image/x-icon" href="{{ asset('build/images/favicon.png') }}"/>
-		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+		<link rel="icon" type="image/x-icon" href="{{ asset('build/images/favicon.png') }}"/>
 		{{ encore_entry_link_tags('app') }}
 		{{ encore_entry_script_tags('app') }}
 	</head>
