--- a/assets/styles/cookie.scss
+++ b/assets/styles/cookie.scss
@@ -48,7 +48,7 @@ color: $creme;
 background-color: rgba(148, 25, 25, 0.7);
 }
 
-
+//for the phone
 @media (max-width: 767px) {
     .des-cookie{
         padding: 3px;
