Latest push before rendered

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,7 @@
 		<link rel="icon" type="image/x-icon" href="{{ asset('build/images/favicon.png') }}"/>
 		{{ encore_entry_link_tags('app') }}
 		{{ encore_entry_script_tags('app') }}
+		<meta name="description" content="Bienvenue au Quai Antique, notre restaurant gastronomique situé dans le 16ème arrondissement de Paris. Découvrez notre cuisine créative et raffinée, élaborée à partir de produits frais et de saison. Savourez un moment d'exception dans un cadre élégant et chaleureux, le tout accompagné d'une sélection de champagnes d'exception. Réservez dès maintenant pour vivre une expérience culinaire inoubliable.">
 	</head>
 	<body>
 		{% include "include/_navbar.html.twig" %}
