Work on the Rgpd

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -1,4 +1,4 @@
-$primary: #5c160d;
+$primary: rgb(92, 22, 13);
 $secondary: rgb(8, 8, 8);
 $navbar-light-active-color: rgb(92, 22, 13);
 // Import Bootstrap styles
