--- a/assets/styles/pre_reservation.scss
+++ b/assets/styles/pre_reservation.scss
@@ -58,6 +58,11 @@
   justify-content: center;
 }
 
+.warning-res{
+  text-align: center;
+  padding-top: 10px;
+}
+
 //for the phone
 @media (max-width: 767px) {
   .inscription{
