--- a/templates/include/_footer.html.twig
+++ b/templates/include/_footer.html.twig
@@ -31,6 +31,12 @@
 					<a href="{{path('app_login')}}">CONNEXION</a>
 				{% endif %}
 			</div>
+			<div>
+				<a href="{{path('app_rgpd')}}">POLITIQUE DE CONFIDENTIALITÉ</a>
+			</div>
+			<div>
+				<a href="{{path('app_cgu')}}">CONDTIONS GÉNÉRALES D'UTILISATIONS</a>
+			</div>
 
 		</div>
 		<div class="column">
@@ -67,6 +73,6 @@
 		</div>
 	</div>
 	<div class="copyright">
-		Copyright © 2023 Restaurant Paris - QUAI ANTIQUE. Website by Coraline.
+		Copyright © 2023 Restaurant Paris - QUAI ANTIQUE. Website by Coraline
 	</div>
 </footer>
