--- a/templates/reservation/pre_reservation.html.twig
+++ b/templates/reservation/pre_reservation.html.twig
@@ -43,6 +43,9 @@
 							Continuer sans compte
 						</a>
 					</div>
+					<div class="warning-res">
+						<b>Attention : Sans compte, il sera difficile de vous prévenir en cas d'imprévu.</b>
+					</div>
 				</div>
 			</div>
 		</div>
