--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,23 +4,27 @@
 {% endblock %}
 
 {% block body %}
-	<h1 class="title">INSCRIPTION</h1>
-	<div class="form">
-		{{ form_start(registrationForm, {'attr':{'novalidate':'novalidate'}}) }}
-		<div class="form-bloc">
-			<div class="form-group">{{ form_row(registrationForm.FirstName) }}</div>
-			<div class="form-group">{{ form_row(registrationForm.LastName) }}</div>
-		</div>
-		{{ form_row(registrationForm.email) }}
-		<div class="form-bloc">
-			<div class="form-group">{{ form_row(registrationForm.plainPassword.first) }}</div>
-			<div class="form-group">{{ form_row(registrationForm.plainPassword.second) }}</div>
-		</div>
-		{{ form_row(registrationForm.phone) }}
-		<div class="agree">
-			{{ form_row(registrationForm.agreeTerms) }}
-		</div>
-		<button type="submit">S'INSCRIRE</button>
-		{{ form_end(registrationForm) }}
-	</div>
+	<main>
+		<article>
+			<h1 class="title">INSCRIPTION</h1>
+			<div class="form">
+				{{ form_start(registrationForm, {'attr':{'novalidate':'novalidate'}}) }}
+				<div class="form-bloc">
+					<div class="form-group">{{ form_row(registrationForm.FirstName) }}</div>
+					<div class="form-group">{{ form_row(registrationForm.LastName) }}</div>
+				</div>
+				{{ form_row(registrationForm.email) }}
+				<div class="form-bloc">
+					<div class="form-group">{{ form_row(registrationForm.plainPassword.first) }}</div>
+					<div class="form-group">{{ form_row(registrationForm.plainPassword.second) }}</div>
+				</div>
+				{{ form_row(registrationForm.phone) }}
+				<div class="agree">
+					{{ form_row(registrationForm.agreeTerms) }}
+				</div>
+				<button type="submit">S'INSCRIRE</button>
+				{{ form_end(registrationForm) }}
+			</div>
+		</article>
+	</main>
 {% endblock %}
