--- a/templates/user/editpassword.html.twig
+++ b/templates/user/editpassword.html.twig
@@ -4,36 +4,41 @@
 {% endblock %}
 
 {% block body %}
-	<div class="container">
-		<h1 class="title">MODIFICATION DU MOT DE PASSE</h1>
+	<main>
+		<div class="container">
 
-		{% for message in app.flashes('success') %}
-			<div class="alert alert-success mt-4 flash">
-				{{ message }}
-			</div>
-		{% endfor %}
+			<article>
+				<h1 class="title">MODIFICATION DU MOT DE PASSE</h1>
+				<aside>
+					{% for message in app.flashes('success') %}
+						<div class="alert alert-success mt-4 flash">
+							{{ message }}
+						</div>
+					{% endfor %}
 
-		{% for message in app.flashes('error') %}
-			<div class="alert alert-danger flash">
-				{{ message }}
-			</div>
-		{% endfor %}
+					{% for message in app.flashes('error') %}
+						<div class="alert alert-danger flash">
+							{{ message }}
+						</div>
+					{% endfor %}
 
-		{% for message in app.flashes('warning') %}
-			<div class="alert alert-warning flash">
-				{{ message }}
-			</div>
-		{% endfor %}
-
-		<div class="form">
-			{{ form_start(form,  {'attr':{'novalidate':'novalidate'}}) }}
-			{{ form_row(form.plainPassword.first) }}
-			{{ form_row(form.plainPassword.second) }}
-			{{ form_row(form.newPassword) }}
-			<button type="submit">
-				MODIFIER MON MOT DE PASSE
-			</button>
+					{% for message in app.flashes('warning') %}
+						<div class="alert alert-warning flash">
+							{{ message }}
+						</div>
+					{% endfor %}
+				</aside>
+				<div class="form">
+					{{ form_start(form,  {'attr':{'novalidate':'novalidate'}}) }}
+					{{ form_row(form.plainPassword.first) }}
+					{{ form_row(form.plainPassword.second) }}
+					{{ form_row(form.newPassword) }}
+					<button type="submit">
+						MODIFIER MON MOT DE PASSE
+					</button>
+				</div>
+				{{ form_end(form) }}
+			</article>
 		</div>
-	</div>
-	{{ form_end(form) }}
+	</main>
 {% endblock %}
