--- a/templates/card/index.html.twig
+++ b/templates/card/index.html.twig
@@ -4,30 +4,36 @@
 {% endblock %}
 
 {% block body %}
-	<h1 class="title">CARTE</h1>
-	<div class="flash">
-		{% for message in app.flashes('success') %}
-			<div class="alert alert-success">
-				{{ message }}
-			</div>
-		{% endfor %}
-	</div>
-	<div class="food-card">
-		{% for category in categories %}
-			<div class="details-card">
-				<h3 class="name-category">{{ category.name | upper }}</h2>
-				{% for card in category.card %}
-					<div class="info-card">
-						<div class="name-price">
-							<p class="name-card">{{ card.title }}</p>
-							<p class="price-card">{{ card.price }}€</p>
+	<main>
+		<article>
+			<h1 class="title">CARTE</h1>
+			<aside>
+				<div class="flash">
+					{% for message in app.flashes('success') %}
+						<div class="alert alert-success">
+							{{ message }}
 						</div>
-						<p class="desc-card">{{ card.description }}</p>
+					{% endfor %}
+				</div>
+			</aside>
+			<div class="food-card">
+				{% for category in categories %}
+					<div class="details-card">
+						<h3 class="name-category">{{ category.name | upper }}</h2>
+						{% for card in category.card %}
+							<div class="info-card">
+								<div class="name-price">
+									<p class="name-card">{{ card.title }}</p>
+									<p class="price-card">{{ card.price }}€</p>
+								</div>
+								<p class="desc-card">{{ card.description }}</p>
+							</div>
+
+						{% endfor %}
 					</div>
 
 				{% endfor %}
 			</div>
-
-		{% endfor %}
-	</div>
+		</article>
+	</main>
 {% endblock %}
