--- a/templates/menu/index.html.twig
+++ b/templates/menu/index.html.twig
@@ -4,31 +4,35 @@
 {% endblock %}
 
 {% block body %}
-	<h1 class="title">MENUS</h1>
-	<div class="food-menu">
-		{% for menu in menus %}
-			<div class="details-menu">
-				<h3 class="name-menu">{{ menu.title | upper}}</h3>
-				{% for formula in menu.formulas %}
-					<div class="desc-price">
-						<h5 class="desc-menu">{{ formula.description }}</h5>
-						<p class="price-menu">{{ formula.price }}€</p>
+	<main>
+		<article>
+			<h1 class="title">MENUS</h1>
+			<div class="food-menu">
+				{% for menu in menus %}
+					<div class="details-menu">
+						<h3 class="name-menu">{{ menu.title | upper}}</h3>
+						{% for formula in menu.formulas %}
+							<div class="desc-price">
+								<h5 class="desc-menu">{{ formula.description }}</h5>
+								<p class="price-menu">{{ formula.price }}€</p>
+							</div>
+						{% endfor %}
+					</div>
+					{% set displayedTypes = [] %}
+					<div class="formula">
+						{% for card in menu.cards %}
+							<div class="details-formula">
+								{% if card.type not in displayedTypes %}
+									<h4 class="type-card">{{card.type}}</h4>
+									{% set displayedTypes = displayedTypes|merge([card.type]) %}
+								{% endif %}
+								<div class="title-formula">{{card.title}}</div>
+								<div class="desc-formula">{{card.description}}</div>
+							</div>
+						{% endfor %}
 					</div>
 				{% endfor %}
 			</div>
-			{% set displayedTypes = [] %}
-			<div class="formula">
-				{% for card in menu.cards %}
-					<div class="details-formula">
-						{% if card.type not in displayedTypes %}
-							<h4 class="type-card">{{card.type}}</h4>
-							{% set displayedTypes = displayedTypes|merge([card.type]) %}
-						{% endif %}
-						<div class="title-formula">{{card.title}}</div>
-						<div class="desc-formula">{{card.description}}</div>
-					</div>
-				{% endfor %}
-			</div>
-		{% endfor %}
-	</div>
+		</article>
+	</main>
 {% endblock %}
