--- a/templates/reservation/new.html.twig
+++ b/templates/reservation/new.html.twig
@@ -4,33 +4,35 @@
 {% endblock %}
 
 {% block body %}
-	<h1 class="title">RÉSERVATION</h1>
-
-	{% for message in app.flashes('error') %}
-		<div class="alert alert-danger flash">
-			{{ message }}
-		</div>
-	{% endfor %}
-
-	{% for message in app.flashes('success') %}
-		<div class="alert alert-success mt-4 flash">
-			{{ message }}
-		</div>
-	{% endfor %}
-
-	<div class="form">
-		{{ form_start(form, {'attr':{'novalidate':'novalidate'}}) }}
-		<div class="form-bloc">
-			<div class="form-group">{{ form_row(form.firstname) }}</div>
-			<div class="form-group">{{ form_row(form.lastname)}}</div>
-		</div>
-		<div class="form-bloc">
-			<div class="form-group">{{ form_row(form.number_of_guest) }}</div>
-			<div class="form-group">{{ form_row(form.date)}}</div>
-		</div>
-		{{ form_rest(form) }}
-		<button>{{ button_label|default('RÉSERVER') }}</button>
-		{{ form_end(form) }}
-	</div>
-
+	<main>
+		<article>
+			<h1 class="title">RÉSERVATION</h1>
+			<aside>
+				{% for message in app.flashes('error') %}
+					<div class="alert alert-danger flash">
+						{{ message }}
+					</div>
+				{% endfor %}
+				{% for message in app.flashes('success') %}
+					<div class="alert alert-success mt-4 flash">
+						{{ message }}
+					</div>
+				{% endfor %}
+			</aside>
+			<div class="form">
+				{{ form_start(form, {'attr':{'novalidate':'novalidate'}}) }}
+				<div class="form-bloc">
+					<div class="form-group">{{ form_row(form.firstname) }}</div>
+					<div class="form-group">{{ form_row(form.lastname)}}</div>
+				</div>
+				<div class="form-bloc">
+					<div class="form-group">{{ form_row(form.number_of_guest) }}</div>
+					<div class="form-group">{{ form_row(form.date)}}</div>
+				</div>
+				{{ form_rest(form) }}
+				<button>{{ button_label|default('RÉSERVER') }}</button>
+				{{ form_end(form) }}
+			</div>
+		</article>
+	</main>
 {% endblock %}
