--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -4,16 +4,19 @@
 {% endblock %}
 
 {% block body %}
-	<h1 class="title">MOT DE PASSE OUBLIÉ</h1>
-	<div class="check-email">
-		<p>
-			Un e-mail vous a été envoyé sur votre boite mail, le lien de résiliation de votre mot de passe expira dans
-			{{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.
-		</p>
-		<p>Si vous ne recevez pas notre e-mail, veuillez regarder dans vos spams ou bien appuyer sur ce
-			<a href="{{ path('app_forgot_password_request') }}">lien</a>
-		</p>
-		<p>Si le problème persite, veuillez nous contacter.</p>
-	</div>
-
+	<main>
+		<article>
+			<h1 class="title">MOT DE PASSE OUBLIÉ</h1>
+			<div class="check-email">
+				<p>
+					Un e-mail vous a été envoyé sur votre boite mail, le lien de résiliation de votre mot de passe expira dans
+					{{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.
+				</p>
+				<p>Si vous ne recevez pas notre e-mail, veuillez regarder dans vos spams ou bien appuyer sur ce
+					<a href="{{ path('app_forgot_password_request') }}">lien</a>
+				</p>
+				<p>Si le problème persite, veuillez nous contacter.</p>
+			</div>
+		</article>
+	</main>
 {% endblock %}
