--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -4,24 +4,27 @@
 {% endblock %}
 
 {% block body %}
-	<h1 class="title">MOT DE PASSE OUBLIÉ</h1>
+	<main>
+		<article>
+			<h1 class="title">MOT DE PASSE OUBLIÉ</h1>
+			<aside>
+				{% for message in app.flashes('error') %}
+					<div class="alert alert-danger flash">
+						{{ message }}
+					</div>
+				{% endfor %}
+			</aside>
+			<div class="form">
+				{{ form_start(requestForm) }}
+				{{ form_row(requestForm.email) }}
+				<div>
+					<small>
+						Entrez votre adresse e-mail, nous allons vous envoyer un lien pour résilier votre mot de passe.
+					</small>
+				</div>
 
-	{% for message in app.flashes('error') %}
-		<div class="alert alert-danger flash">
-			{{ message }}
-		</div>
-	{% endfor %}
-
-	<div class="form">
-		{{ form_start(requestForm) }}
-		{{ form_row(requestForm.email) }}
-		<div>
-			<small>
-				Entrez votre adresse e-mail, nous allons vous envoyer un lien pour résilier votre mot de passe.
-			</small>
-		</div>
-
-		<button>ENVOYER E-MAIL</button>
-		{{ form_end(requestForm) }}</div>
-
+				<button>ENVOYER E-MAIL</button>
+				{{ form_end(requestForm) }}</div>
+		</article>
+	</main>
 {% endblock %}
