--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -4,11 +4,14 @@
 {% endblock %}
 
 {% block body %}
-	<h1 class="title">MOT DE PASSE OUBLIÉ</h1>
-	<div class="form">
-		{{ form_start(resetForm) }}
-		{{ form_row(resetForm.plainPassword) }}
-		<button>CHANGER VOTRE MOT DE PASSE</button>
-		{{ form_end(resetForm) }}</div>
-
+	<main>
+		<article>
+			<h1 class="title">MOT DE PASSE OUBLIÉ</h1>
+			<div class="form">
+				{{ form_start(resetForm) }}
+				{{ form_row(resetForm.plainPassword) }}
+				<button>CHANGER VOTRE MOT DE PASSE</button>
+				{{ form_end(resetForm) }}</div>
+		</article>
+	</main>
 {% endblock %}
