modifications after oral

--- a/templates/RGPD/CGU.html.Twig
+++ b/templates/RGPD/CGU.html.Twig
@@ -4,7 +4,7 @@
 {% block body %}
 	<main>
 		<article>
-			<h1 class="title">CONDITIONS GÉNÉRALES D'UTILISATIONS</h1>
+			<h1 class="title">CONDITIONS GÉNÉRALES D'UTILISATION</h1>
 
 			<p>Les présentes conditions générales d'utilisation régissent votre utilisation du site Quai Antique et les services connexes. En accédant à ce site et en l'utilisant, vous acceptez ces conditions dans leur intégralité. Si vous n'acceptez pas ces conditions, veuillez ne pas utiliser ce site.</p>
 
@@ -29,7 +29,7 @@
 			<h2>Nous contacter</h2>
 			<p>Si vous avez des questions concernant ces conditions générales d'utilisation, veuillez nous contacter :</p>
 			<ul>
-				<li>E-mail : no-reply@quaiantiqueparis.fr</li>
+				<li>E-mail : devwithcoraline@gmail.com</li>
 			</ul>
 		</article>
 	</main>
