--- a/templates/RGPD/politique.html.Twig
+++ b/templates/RGPD/politique.html.Twig
@@ -12,7 +12,8 @@
 			<p>Lorsque vous utilisez notre site, nous collectons les informations suivantes :</p>
 			<ul>
 				<li>Nom</li>
-				<li>Numéro</li>
+				<li>Prénom</li>
+				<li>Numéro de téléphone</li>
 				<li>Adresse e-mail</li>
 				<li>Mot de passe</li>
 			</ul>
@@ -21,7 +22,10 @@
 			<p>Nous utilisons les informations que vous nous fournissez pour personnaliser votre expérience sur notre site et pour vous fournir les services que vous avez demandés. Nous ne partageons pas ces informations avec des tiers sans votre consentement explicite.</p>
 
 			<h2>Cookies</h2>
-			<p>Nous utilisons des cookies sur notre site pour assurer sa sécurité. Les cookies sont de petits fichiers texte stockés sur votre ordinateur. Vous avez la possibilité de désactiver les cookies dans les paramètres de votre navigateur.</p>
+			<p>Nous utilisons des cookies sur notre site pour assurer sa sécurité et pour être en conformité avec la réglementation sur la protection des données. Les cookies sont de petits fichiers texte stockés sur votre ordinateur. Vous avez la possibilité de désactiver les cookies dans les paramètres de votre navigateur.</p>
+
+			<h2>Durée de conservation des cookies</h2>
+			<p>Les cookies que nous utilisons sont configurés pour être conservés pendant 24 heures. Cela signifie qu'ils seront automatiquement supprimés après cette période. Aucune donnée n'est stockée au-delà de cette période.</p>
 
 			<h2>Sécurité des données</h2>
 			<p>Nous prenons des mesures de sécurité appropriées pour protéger vos informations personnelles contre tout accès non autorisé, toute perte ou toute divulgation.</p>
@@ -32,10 +36,13 @@
 			<h2>Modification de la politique de confidentialité</h2>
 			<p>Nous nous réservons le droit de modifier cette politique de confidentialité à tout moment. Toute modification sera indiquée sur cette page. Nous vous recommandons de consulter régulièrement cette politique.</p>
 
+			<h2>Google Fonts</h2>
+			<p>Nous utilisons Google Fonts pour améliorer l'apparence de notre site web. Les polices de caractères sont intégrées localement, ce qui signifie qu'elles ne sont pas chargées depuis les serveurs de Google Fonts. Aucune donnée personnelle n'est transmise à Google Fonts lors de l'utilisation de ces polices.</p>
+
 			<h2>Nous contacter</h2>
 			<p>Si vous avez des questions concernant notre politique de confidentialité, veuillez nous contacter :</p>
 			<ul>
-				<li>E-mail : no-reply@quaiantiqueparis.fr</li>
+				<li>E-mail : devwithcoraline@gmail.com</li>
 			</ul>
 		</article>
 	</main>
