--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,7 +8,8 @@
 		<link href="https://fonts.googleapis.com/css2?family=Bitter:wght@700&family=Buenard&family=Mukta+Vaani&display=swap" rel="" stylesheet>
 		<title>
 			{% block title %}Accueil
-			{% endblock %}- Quai Antique</title>
+			{% endblock %}- Quai Antique
+		</title>
 		<link rel="icon" type="image/x-icon" href="{{ asset('build/images/favicon.png') }}"/>
 		{{ encore_entry_link_tags('app') }}
 		{{ encore_entry_script_tags('app') }}
