--- a/templates/include/_footer.html.twig
+++ b/templates/include/_footer.html.twig
@@ -32,12 +32,14 @@
 				{% endif %}
 			</div>
 			<div>
+				<a href="{{path('app_mentions')}}">MENTIONS LÉGALES</a>
+			</div>
+			<div>
 				<a href="{{path('app_rgpd')}}">POLITIQUE DE CONFIDENTIALITÉ</a>
 			</div>
 			<div>
-				<a href="{{path('app_cgu')}}">CONDTIONS GÉNÉRALES D'UTILISATIONS</a>
+				<a href="{{path('app_cgu')}}">CONDTIONS GÉNÉRALES D'UTILISATION</a>
 			</div>
-
 		</div>
 		<div class="column">
 			<h3>Horaires d'ouverture</h3>
